--- a/cssStyle1.css
+++ b/cssStyle1.css
@@ -66,3 +66,11 @@ p {
   font-size: small;
   margin-left: 230px;
 }
+
+#divTopScores {
+  position : absolute;
+  visibility: hidden;
+  background-color: rgb(255, 255, 255);
+  font-size: small;
+  margin-left: 230px;
+}
