--- a/cssStyle1.css
+++ b/cssStyle1.css
@@ -27,6 +27,40 @@ p {
   font-size: 16px;
 }
 
+.dropButoane {
+  background-color: rgb(255, 255, 255);
+  border: none;
+  padding: 7px 2px;
+  text-align: left;
+  text-decoration: none;
+  font-family: arial, sans-serif;
+  font-size: 16px;
+  width:100%;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
 #divMenu {
     font-family: arial, sans-serif;
     font-size: 5;
@@ -35,6 +69,7 @@ p {
     height: auto;
     top: 0;
     float: left;
+    position: relative;
 }
 
 #logo {
@@ -74,3 +109,17 @@ p {
   font-size: small;
   margin-left: 230px;
 }
+
+.content {
+  position : absolute;
+  visibility: hidden;
+  background-color: rgb(255, 255, 255);
+  font-size: small;
+  margin-left: 230px;
+}
+
+.dropdown-content a:hover {background-color: #ddd;}
+
+.dropdown:hover .dropdown-content {display: block;}
+
+.dropdown:hover .dropbtn {background-color: #3e8e41;}
